--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,4 @@
-/* Description: Master CSS file */
 
-/*****************************************
-Table Of Contents:
-******************************************/
-
-/*****************************************
-Colors:
-- Backgrounds - light gray #f9f9f9
-- Buttons, links - red #e5575e
-- Headings text - black #30363a
-- Body text - dark gray #474c4e
-******************************************/
 
 
 /**************************/
@@ -159,7 +147,7 @@ hr.hr-heading {
 
 .btn-solid-reg:hover {
 	background-color: transparent;
-	color: #e5575e; /* needs to stay here because of the color property of a tag */
+	color: #e5575e; 
 	text-decoration: none;
 }
 
@@ -179,7 +167,7 @@ hr.hr-heading {
 
 .btn-solid-lg:hover {
 	background-color: transparent;
-	color: #e5575e; /* needs to stay here because of the color property of a tag */
+	color: #e5575e;
 	text-decoration: none;
 }
 
@@ -406,7 +394,7 @@ hr.hr-heading {
 
 
 /*******************/
-/*     Process     */
+/*     Education     */
 /*******************/
 .cards-1 {
 	padding-top: 7.75rem;
@@ -440,7 +428,7 @@ hr.hr-heading {
 
 
 /**********************/
-/*     Experience     */
+/* Employment history */
 /**********************/
 .basic-2 {
 	padding-top: 2.25rem;
@@ -463,7 +451,7 @@ hr.hr-heading {
 
 
 /************************/
-/*     Testimonials     */
+/*     Quotes     */
 /************************/
 .basic-3 {
 	padding-top: 3.25rem;
@@ -500,7 +488,7 @@ hr.hr-heading {
 
 
 /*********************/
-/*     Customers     */
+/*     Tools         */
 /*********************/
 .slider {
 	padding-top: 1.5rem;
@@ -605,7 +593,7 @@ hr.hr-heading {
 
 .basic-4 .swiper-button-prev:focus,
 .basic-4 .swiper-button-next:focus {
-	/* even if you can't see it chrome you can see it on mobile device */
+	
 	outline: none;
 }
 
@@ -1157,7 +1145,7 @@ hr.hr-heading {
 	/* end of description */
 
 
-	/* Process */
+	/* Education */
 	.cards-1 .card {
 		width: 21rem;
 	}
@@ -1166,10 +1154,10 @@ hr.hr-heading {
 		margin-right: 2.875rem;
 		margin-left: 2.875rem;
 	}
-	/* end of process */
+	
 
 
-	/* Testimonials */
+	/* Tools */
 	.basic-3 .list-unstyled.first {
 		margin-right: 0.625rem;
 	}
@@ -1190,7 +1178,7 @@ hr.hr-heading {
 	.basic-3 .d-flex {
 		padding: 2.25rem 1.5rem 2.125rem 1.5rem;
 	}
-	/* end of testimonials */
+	
 
 
 	/* Services */
